<resources>
    <string name="app_name">CleanDigital</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password</string>
    <string name="register">Register</string>
    <string name="it_is_not_client">It is not client</string>
    <string name="auth_failed">Auth failed</string>
    <string name="send_new_password">Send new password</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="check_your_email">Success! Check your email</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="successfully_registered">You was successfully registered! You can login now</string>
    <string name="laundries">Laundries</string>
    <string name="events">Events</string>
    <string name="user_info">User info</string>
    <string name="settings">Settings</string>
    <string name="id">id</string>
    <string name="address">Address</string>
    <string name="model">Model</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="capacity">Capacity</string>
    <string name="power_usage">Power usage</string>
    <string name="spinning_speed">Spinning speed</string>
    <string name="is_working">Is working</string>
    <string name="is_washing">Is washing</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wash_machines">Washing Machines</string>
    <string name="washing_machine">Washing machine</string>
    <string name="temperature">Temperature</string>
    <string name="mode">Mode</string>
    <string name="additional_mode">Additional mode</string>
    <string name="time_begin">Time begin</string>
    <string name="time_end">Time end</string>
    <string name="paid_status">Paid status</string>
    <string name="paid_bonuses">Paid bonuses</string>
    <string name="rating">Rating</string>
    <string name="paid_money">Paid money</string>
    <string name="pay">Pay</string>
    <string name="take">Take</string>
    <string name="rate">Rate</string>
    <string name="paid">Paid</string>
    <string name="not_paid">Not paid</string>
    <string name="mark_the_process">Mark the process</string>
    <string name="_1_horrible">1 (Horrible)</string>
    <string name="_2_bad">2 (Bad)</string>
    <string name="_3_normal">3 (Normal)</string>
    <string name="_4_very_good">4 (Very good)</string>
    <string name="_5_excellent">5 (Excellent)</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="scan_qr">Scan QR-code</string>
    <string name="pay_for_event">Pay for event</string>
    <string name="costs">Costs</string>
    <string name="time">Time</string>
    <string name="bonuses">Bonuses</string>
    <string name="left_bonuses">Left bonuses</string>
    <string name="sale">Sale</string>
    <string name="edit">Edit</string>
    <string name="update_password">Update password</string>
    <string name="save">Save</string>
    <string name="edit_info">Edit info</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="exit">Exit</string>
    <string name="delete_account">Delete account</string>
    <string name="Language" >Language</string>
    <string name="english">English</string>
    <string name="ukrainian">Ukrainian</string>
</resources>