<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="32dp"
    android:paddingHorizontal="16dp"
    tools:context=".fragments.RatingDialogFragment">

    <TextView
        android:id="@+id/textView"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/mark_the_process"
        android:textColor="@color/design_default_color_primary_variant"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/ratingRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:padding="24dp"
        android:checkedButton="@id/fiveMark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" >

        <RadioButton
            android:id="@+id/oneMark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/_1_horrible"
            android:hint="1"
            android:textColor="@color/design_default_color_primary_variant"
            />

        <RadioButton
            android:id="@+id/twoMark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:hint="2"
            android:textColor="@color/design_default_color_primary_variant"
            android:text="@string/_2_bad"
            />

        <RadioButton
            android:id="@+id/threeMark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:hint="3"
            android:textColor="@color/design_default_color_primary_variant"
            android:text="@string/_3_normal"
            />

        <RadioButton
            android:id="@+id/fourMark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:hint="4"
            android:textColor="@color/design_default_color_primary_variant"
            android:text="@string/_4_very_good"
            />

        <RadioButton
            android:id="@+id/fiveMark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:hint="5"
            android:textColor="@color/design_default_color_primary_variant"
            android:text="@string/_5_excellent"
            />
    </RadioGroup>

    <Button
        android:id="@+id/cancel_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/send_rating"
        app:layout_constraintTop_toBottomOf="@+id/ratingRadioGroup" />

    <Button
        android:id="@+id/send_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingRadioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>